welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if((cigars>=40)&&(cigars<=60)){
    ^